# AL.Qarib

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
assets/: Nabawi_Mosque.json  adeiat_llmtwffy.json  adeiat_wa_azkar_mutanawiea.json  alsalat_ealaa_alnabii.json  athan5.json  ayat_alkursii.json  azkar_alkhala.json  azkar_almanzel.json  azkar_altaaam.json  azkar_azima.json  azkar_baad_salah.json  azkar_masaa.json  azkar_sabah.json  istanbul.json  jwamea6.json  kaaba4.json  quran.json  quran1.json  quran_backup.json  sadaqa_gariya.json  sleep.json  sujud.json  timed_sunan.json  untimed_sunan.json  wakeup.json  wodu50.json  wudu_steps.json
