[project]
name = "alqarib"
version = "1.0.0"
dependencies = [
    "flet",
    "flet-ads",
]

[tool.flet]
org = "com.alqarib"

[tool.flet.android]
signing_key_store = "/home/runner/work/AL.Qarib/AL.Qarib/build/flutter/android/app/alqarib.jks"
signing_key_store_password = "12345678910"
signing_key_alias = "alqarib"
signing_key_password = "12345678910"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-9178517854331057~2091373767"

[tool.flet.ios.info]
GADApplicationIdentifier = "ca-app-pub-9178517854331057~2091373767"
