[project]
name = "alqarib"
version = "1.0.0"
dependencies = [
    "flet",
    "flet-ads",
]
[tool.flet]
org = "com.alqarib"
# توقيع Android (الصحيح)
[tool.flet.android.signing]
key_store = "alqarib.jks"          # مسار بسيط نسبي
key_alias = "alqarib"
# بيانات Google Ads
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-9178517854331057~2091373767"
[tool.flet.ios.info]
GADApplicationIdentifier = "ca-app-pub-9178517854331057~2091373767"
